# arguskube

./: .context.md  .env.example  .gitignore  .mockery.yaml  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  DECISION_LOG.md  FEATURES.md  KUBE_GUARDIAN_REVIEW.md  KubeWatcher_User_Guide.docx  Makefile  README 2.md  README.md  REVIEW_SUMMARY.md  TEST_GAP_STATUS.md  TEST_PLAN.md  TEST_RESULTS.md  docker-compose.yml  fix_imports.cjs  frontend-test-audit-and-code-review.txt  go.mod  go.sum  go.work  go.work.sum  kube_watcher_sre_reference.html  main.go  terminal-review-2026-05-17.md  wails.json
HomePage/: index.html  package-lock.json  package.json
agent/: Dockerfile  go.mod  go.sum  main.go
agent/python_agents/: README.md  __init__.py  analysis_agent.py  base.py  chroma_store.py  config.py  context_agent.py  cost_agent.py  diagnosis_agent.py  docs_agent.py  event_bus.py  models.py  orchestrator.py  proactive_agent.py  pyproject.toml  remediation_agent.py  requirements.txt  security_agent.py
agent/python_agents/src/argus_agents/: __init__.py  analysis_agent.py  base.py  chroma_store.py  config.py  context_agent.py  cost_agent.py  diagnosis_agent.py  docs_agent.py  event_bus.py  orchestrator.py  remediation_agent.py  security_agent.py
agent/python_agents/src/argus_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent/python_agents/src/argus_agents/db_agents/: base_db_agent.py  postgres_agent.py
agent/python_agents/tests/: conftest.py  test_analysis_agent.py  test_base.py  test_chroma_store.py  test_cli.py  test_config.py  test_context_agent.py  test_db_agents.py  test_event_bus.py  test_models.py  test_orchestrator.py  test_proactive_agent.py
alert-ingress/: .example.env  Dockerfile  README.md  nginx.conf
anomstack/: requirements.txt
api-gov/: .env.example  .gitignore  Makefile  PROD_READINESS.md  README.md  docker-compose.yml
api-gov/agents/: Dockerfile  pyproject.toml
api-gov/agents/src/: config.py  database.py  redis_client.py  server.py
api-gov/agents/src/anomaly/: __init__.py  api_anomaly.py  batch_worker.py  counters.py  llm_usage.py  metadata_filter.py  metrics_anomaly.py  stats.py  structural.py
api-gov/agents/src/graphs/: architect.py  hacker.py  healer.py  investigator.py  orchestrator.py  sentinel.py  state.py
api-gov/agents/tests/: conftest.py  test_architect.py  test_hacker.py  test_healer.py  test_orchestrator.py  test_sentinel.py
api-gov/middleware/: pyproject.toml
api-gov/middleware/src/: middleware.py
api-gov/middleware/tests/: conftest.py  test_middleware.py
argus/: go.mod
backend/: Dockerfile  build.sh  go.mod  go.sum  main.go  wails.json
deploy/: PLAN.md
design-references/: UX_REFERENCE.md  argus_implementation_plan.md  feature_backend_architecture.md  kube_watcher_sre-ea649360.html  kubewatcher_09_diagnostics_panel.html  (+9 more)
flink/: Dockerfile
(+1560 files in other folders)
