[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-agents"
version = "0.1.0"
description = "Multi-agent AI system for KubeWatcher — diagnosis, remediation, analysis, security, cost, and documentation agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "chromadb>=0.5,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[project.urls]
Source = "https://github.com/Argus/argursKube"

[project.scripts]
argus-agent = "argus_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["argus_agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
