[project]
name = "api-gov-agents"
version = "0.1.0"
description = "LangGraph agent service for API governance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "redis[hiredis]>=5.2.0",
    "numpy>=2.2.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.53b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
